implement easy Repository but not flexibility

--- a/Users/appsettings.json
+++ b/Users/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Database": "Data Source=localhost;Initial Catalog=Template.Database;User ID=sa;Password=1111;Application name=TemplateProject",
+    "AllowedHosts": "*"
+  }
 }
