--- a/Users/Users.csproj
+++ b/Users/Users.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TemplateProject.DAL\TemplateProject.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
